Links list + misc css

--- a/src/components/terminal.css
+++ b/src/components/terminal.css
@@ -3,9 +3,10 @@
   background: black;
   color: green;
   /* font-family: "DejaVu Sans Mono","Liberation Mono", "monospace"; */
+  /* font-family: Courier, monospace; */
   font-family: monospace;
-
-  font-size: 25px;
+  /* word-break: break-all; */
+  font-size: 20px;
   font-style: normal;
   font-variant: normal;
   padding: 8px;
